// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form text component should render list of errors when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="govuk-error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="govuk-error-summary__title"
    id="error-summary-heading-example-1"
  >
    There’s a problem
  </h2>
  <div
    class="govuk-error-summary__body"
  >
    <ul
      class="govuk-list govuk-error-summary__list"
    >
      <li>
        <a
          href="#field1-error"
        >
          Error 1
        </a>
      </li>
      <li>
        <a
          href="#field2-error"
        >
          Error 2
        </a>
      </li>
      <li>
        <a
          href="#field3-error"
        >
          Error 3
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Form text component should render with default props 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="govuk-error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="govuk-error-summary__title"
    id="error-summary-heading-example-1"
  >
    There’s a problem
  </h2>
  <div
    class="govuk-error-summary__body"
  >
    <ul
      class="govuk-list govuk-error-summary__list"
    />
  </div>
</div>
`;

exports[`Form text component should render with description when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="govuk-error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="govuk-error-summary__title"
    id="error-summary-heading-example-1"
  >
    There’s a problem
  </h2>
  <div
    class="govuk-error-summary__body"
  >
    <p>
      Displaying a list of the errors on the page
    </p>
    <ul
      class="govuk-list govuk-error-summary__list"
    />
  </div>
</div>
`;

exports[`Form text component should render with heading when passed 1`] = `
<div
  aria-labelledby="error-summary-heading-example-1"
  class="govuk-error-summary"
  role="alert"
  tabindex="-1"
>
  <h2
    class="govuk-error-summary__title"
    id="error-summary-heading-example-1"
  >
    Error summary
  </h2>
  <div
    class="govuk-error-summary__body"
  >
    <ul
      class="govuk-list govuk-error-summary__list"
    />
  </div>
</div>
`;
